Added work on the ide and exec JS files
Updated project with updated IDE and EXEC JS files.

--- a/public_html/test.html
+++ b/public_html/test.html
@@ -1,8 +1,9 @@
 <html>
-<head>
-	<script type="text/javascript" src="exec.js"></script>
-</head>
-	<body>
+   <head>
+      <title>JsonPL Test v0.01</title>
+      <script type="text/javascript" src="exec.js"></script>
+   </head>
+   <body>
 
-	</body>
+   </body>
 </html>
