Added work on IDE row formatting.
Updated project with work on IDE row formatting.

--- a/public_html/ide.html
+++ b/public_html/ide.html
@@ -23,6 +23,7 @@
          var cfg = {};
          cfg.margin = 4;
          cfg.fontSize = 12;
+         cfg.width = "80%";
          
          function init() {
             wr("init");
