Added work on the Java version of the interpreter, type checking, more
Updated project with new work on the Java version of the interpreter, type checking, cleaning up the Javascript, etc.

--- a/public_html/TEST4.HTML
+++ b/public_html/TEST4.HTML
@@ -309,6 +309,10 @@
             /////////////////////////TEST SECTION
             var jpl = new jsonPlState();
             jpl.program = JSON.parse(JSON.stringify(code));
+            
+            if(!jpl.validateSysObjClass(jpl.program)) {
+               jpl.wr("runProgram: Error: could not validate the class object.");
+            }
 
             var res = null;
             var tmp = null;
