Added work on the C# version of the JsonPL 0.5.1 interpreter
Updated project with the seed project and class setup for the C# version of the JsonPL 0.5.1 interpreter

--- a/public_html/TEST4.HTML
+++ b/public_html/TEST4.HTML
@@ -671,7 +671,7 @@
             jpl.runProgram();
 
             jpl.wr("====================== TEST 10.00: Full Program 2 ======================");
-            var jplData = [ 33, true ];
+            var jplData = [ "33", "true" ];
             var jplCode = JSON.parse(JSON.stringify(code));
 
             function test(dataFromAjax, jplCodeFromAjax) {
