Updated project with the latest changes to support the processReplDirectives function which replaces tags in the JSON source string with values, tags are of the form &(repl:some string value)

--- a/public_html/TEST4.HTML
+++ b/public_html/TEST4.HTML
@@ -748,7 +748,7 @@
                jpl.wr("!invalid JSON");
                return;
             }            
-            jpl.wr("====================== TEST 12.01: Dynamic Class Variable Reference ======================");
+            jpl.wr("====================== TEST 12.01: Dynamic Class Variable Reference 2 ======================");
             jpl.wrObj(tmp);
             jpl.wr("REF 1:");
             res = jpl.processRef(tmp, code.funcs[0]);
