Updated project with the latest changes to the Javascript version of the 0.5.1 interpreter. I'll update the Java and C# interpreters soon. And more work to come with the C version of the interpreter.

--- a/public_html/EXEC4.HTML
+++ b/public_html/EXEC4.HTML
@@ -1,6 +1,6 @@
 <html>
    <head>
-      <title>JsonPL Test v0.5.1</title>
+      <title>JsonPL v0.5.1</title>
       <script type="text/javascript" src="exec4.js"></script>
       <script type="text/javascript">
          var code = {
