Updated project with the latest changes to test null string values in some objects.

--- a/public_html/cfg/TEST2.HTML
+++ b/public_html/cfg/TEST2.HTML
@@ -21,7 +21,7 @@
                      {"sys":"call", "name":"SYS::getRef", "args":[
                         {"sys":"const", "val":{"sys":"val", "type":"string", "v":"tmp1"}},
                         {"sys":"const", "val":{"sys":"val", "type":"bool", "v":"true"}},
-                        {"sys":"const", "val":{"sys":"val", "type":"string", "v":"null"}}
+                        {"sys":"const", "val":{"sys":"val", "type":"string", "v":""}}
                      ]}
                   ]
                }
