Updated project with work on the Javascript 0.5.1 interpreter refining the implementation by intoducing new test files. Updates to the Java and C# versions of the interpreter to come followed by the C implementation.

--- a/public_html/cfg/TEST1.HTML
+++ b/public_html/cfg/TEST1.HTML
@@ -32,7 +32,7 @@
           * Desc: A function to init the test page.
           */
          function init() {
-            var desc = "A test to demonstrate getting a length from a non-array variable.";
+            var desc = "A test to demonstrate getting a length from a class non-array variable.";
             var txtArea = document.getElementById('message');
          
             jsonPlState.prototype.wr = function(s) {
