--- a/public_html/cfg/TEST2.HTML
+++ b/public_html/cfg/TEST2.HTML
@@ -34,7 +34,7 @@
           * Desc: A function to init the test page.
           */
          function init() {
-            var desc = "A test to demonstrate getting a variable reference as a sys object string const.";
+            var desc = "A test to demonstrate getting a class variable reference as a sys ref object.";
             var txtArea = document.getElementById('message');
          
             jsonPlState.prototype.wr = function(s) {
