--- a/public_html/cfg/TEST4.HTML
+++ b/public_html/cfg/TEST4.HTML
@@ -32,7 +32,7 @@
           * Desc: A function to init the test page.
           */
          function init() {
-            var desc = "A test to demonstrate getting a variable type as a sys object string const.";
+            var desc = "A test to demonstrate getting a class variable type as a sys object string const.";
             var txtArea = document.getElementById('message');
          
             jsonPlState.prototype.wr = function(s) {
