--- a/public_html/cfg/TEST5.HTML
+++ b/public_html/cfg/TEST5.HTML
@@ -1,6 +1,6 @@
 <html>
    <head>
-      <title>JsonPL Test 0</title>
+      <title>JsonPL Test 5</title>
       <script type="text/javascript" src="../exec4.js"></script>
       <script type="text/javascript">
          var code = {
@@ -27,9 +27,9 @@
                   ],
                   "vars":[
                   ],
-                  "ret":{"sys":"val", "type":"int", "v":"-1"},
+                  "ret":{"sys":"val", "type":"string", "v":""},
                   "lines":[
-                     {"sys":"call", "name":"SYS::len", "args":[
+                     {"sys":"call", "name":"SYS::type", "args":[
                         {"sys":"const", "val":{"sys":"val", "type":"string", "v":"#.vars.tmp1"}}
                      ]}
                   ]
@@ -43,7 +43,7 @@
           * Desc: A function to init the test page.
           */
          function init() {
-            var desc = "A test to demonstrate getting a length from a class array variable.";
+            var desc = "A test to demonstrate getting a class array variable type as a sys object string const.";
             var txtArea = document.getElementById('message');
          
             jsonPlState.prototype.wr = function(s) {
