--- a/public_html/cfg/TEST2.HTML
+++ b/public_html/cfg/TEST2.HTML
@@ -34,7 +34,7 @@
           * Desc: A function to init the test page.
           */
          function init() {
-            var desc = "A test to demonstrate getting a class variable reference as a sys ref object.";
+            var desc = "A test to demonstrate getting a class variable reference as a ref object.";
             var txtArea = document.getElementById('message');
          
             jsonPlState.prototype.wr = function(s) {
@@ -79,8 +79,8 @@
       </script>
    </head>
    <body style="padding: 4px;" onload="init()">
-<span style="font-size:14px;">Test Results:</span><br/>
-<textarea cols="125" rows="25" id="message" style="font-size:12px;">
-</textarea>
+      <span style="font-size:14px;">Test Output (See page source for more details):</span><br/>
+      <textarea cols="125" rows="25" id="message" style="font-size:12px;">
+      </textarea>
    </body>
 </html>
