--- a/public_html/cfg/TEST4.HTML
+++ b/public_html/cfg/TEST4.HTML
@@ -32,7 +32,7 @@
           * Desc: A function to init the test page.
           */
          function init() {
-            var desc = "A test to demonstrate getting a class variable type as a sys object string const.";
+            var desc = "A test to demonstrate getting a class variable's type as a const object.";
             var txtArea = document.getElementById('message');
          
             jsonPlState.prototype.wr = function(s) {
@@ -77,8 +77,8 @@
       </script>
    </head>
    <body style="padding: 4px;" onload="init()">
-<span style="font-size:14px;">Test Results:</span><br/>
-<textarea cols="125" rows="25" id="message" style="font-size:12px;">
-</textarea>
+      <span style="font-size:14px;">Test Output (See page source for more details):</span><br/>
+      <textarea cols="125" rows="25" id="message" style="font-size:12px;">
+      </textarea>
    </body>
 </html>
